--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -28,6 +28,10 @@
 			"src": "/icons/app-256.png",
 			"sizes": "256x256",
 			"type": "image/png"
+		}, {
+			"src": "/icons/app-512.png",
+			"sizes": "512x512",
+			"type": "image/png"
 		}
 	],
 	"display":"minimal-ui",
