--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -34,7 +34,7 @@
 			"type": "image/png"
 		}
 	],
-	"display":"minimal-ui",
+	"display":"fullscreen",
 	"name": "Sonic The Hedgehog 3000",
 	"orientation": "landscape",
 	"theme_color": "black",
