--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "curvature": "^0.0.66-k",
     "pokemon-parser": "^0.0.5-c",
-    "subspace-client": "^0.0.7-a",
+    "subspace-client": "^0.0.8",
     "subspace-console": "^0.0.1-d",
     "three": "^0.128.0",
     "three-collada-loader": "^0.0.1-a"
