--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-brunch": "^7.0.1",
     "babel-minify": "^0.1.12",
     "brunch": "^4.0.0",
+    "brunch-preval": "^0.0.3",
     "clean-css-brunch": "^3",
     "raw-brunch": "^1.0.2",
     "uglify-es-brunch": "^1"
