--- a/app/assets/map/appended-map.json
+++ b/app/assets/map/appended-map.json
@@ -52,6 +52,12 @@
  "nextlayerid":5,
  "nextobjectid":3,
  "orientation":"orthogonal",
+ "properties":[
+        {
+         "name":"theme",
+         "type":"string",
+         "value":"construct"
+        }],
  "renderorder":"right-down",
  "tiledversion":"1.7.1",
  "tileheight":32,
